# nkyx-ds-template

./: .gitignore  README.md  _post_init.py  copier.yml  pdm.toml  post_init.py  pyproject.toml  pyproject2.toml
data/: README.md
experiments/: README.md
notebooks/: README.md  hello_world.ipynb
scripts/: README.md  hello_world.py
src/nkyx/ds_template/: __version__.py
src/nkyx_ds_template/: __init__.py  __version__.py  hello_world.py
streamlit_apps/: README.md
tests/: test_methods.py
