# pyproject.toml reference: https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]

requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nkyx_ds_template"
authors = [{name = "NKYX", email = "qu.tang@outlook.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://qutang.dev"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/how-to/mark.html
markers = [
    "integration: integration tests"
]