[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "nkyx-ds-template"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version"]
requires-python = ">=3.9,!=3.9.7,<3.13"
dependencies = []
license = { text = "MIT" }

[project.urls]


[tool.pytest.ini_options]
markers = ["integration: integration tests"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3,<8",
    "black>=23.10.1,<24",
    "notebook~=7.0",
    "ipywidgets~=8.1",
    "voila~=0.5",
    "streamlit>=1.28",
]

[tool.pdm.version]
source = "scm"
tag_regex = "^v([0-9]+)(\\.([0-9]+))?(\\.([0-9]+))?(\\.(a|b|c|rc)([0-9]*))?(\\.post([0-9]*))?(\\.dev([0-9]*))?$"
write_to = "nkyx_ds_template/__init__.py"
write_template = "__version__ = '{}'"
